[BACK] Add edit user and fix bugs
