# back/rust-away/src/main/java/com/amarchanh/rustaway/controller/UserController.java
@@ -4,18 +4,20 @@ package com.amarchanh.rustaway.controller;
 import com.amarchanh.rustaway.api.UserApi;
 import com.amarchanh.rustaway.controller.mapper.TokenMapper;
 import com.amarchanh.rustaway.controller.mapper.UserMapper;
-import com.amarchanh.rustaway.model.LoginRequest;
-import com.amarchanh.rustaway.model.TokenResponse;
-import com.amarchanh.rustaway.model.UserRequest;
+import com.amarchanh.rustaway.model.*;
 import com.amarchanh.rustaway.service.AuthenticationService;
+import com.amarchanh.rustaway.service.UserService;
+import com.amarchanh.rustaway.service.exceptions.NotFoundException;
 import com.amarchanh.rustaway.service.model.Jwt;
+import com.amarchanh.rustaway.service.model.User;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.crossstore.ChangeSetPersister;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
-@CrossOrigin(origins={"http://localhost:4200"})
+@CrossOrigin
 @RestController
 @AllArgsConstructor
 @Slf4j
@@ -27,25 +29,8 @@ public class UserController implements UserApi {
 
     private final TokenMapper tokenMapper;
 
-    @Override
-    public ResponseEntity<TokenResponse> logIn(LoginRequest loginRequest) {
-        try {
-            log.info("Login request for user {}", loginRequest.getUsername());
-            return ResponseEntity.ok(authenticationService.login(loginRequest));
+    private final UserService userService;
 
-                    //TokenResponse.builder().token("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c").build());
-        }
-        /*
-        catch ( e) {
-            log.error("Login request ends in error caused by {}", e.getCause());
-            return ResponseEntity.notFound().build();
-        }
-         */
-        catch (Exception e) {
-            log.error("Login request ends in error caused by " + e.getCause());
-            return ResponseEntity.internalServerError().build();
-        }
-    }
 
     @Override
     public ResponseEntity<TokenResponse> signUp(UserRequest userRequest) {
@@ -56,6 +41,46 @@ public class UserController implements UserApi {
         }
         catch (Exception e) {
             log.error("Signup request ends in error caused by " + e.getCause());
+            return ResponseEntity.internalServerError().build();
+        }
+    }
+
+    @Override
+    public ResponseEntity<TokenResponse> logIn(LoginRequest loginRequest) {
+        try {
+            log.info("Login request for user {}", loginRequest.getUsername());
+            return ResponseEntity.ok(authenticationService.login(loginRequest));
+        }
+        catch (NotFoundException e) {
+            log.error("Login request failed in error caused by {}", e.getCause());
+            return ResponseEntity.internalServerError().build();
+        }
+    }
+
+    @Override
+    public ResponseEntity<UserResponse> getUser(String username) {
+        try {
+            User user = userService.getUserByUsername(username);
+            return ResponseEntity.ok(userMapper.toResponse(user));
+        }
+        catch (NotFoundException e) {
+            return ResponseEntity.notFound().build();
+        }
+        catch (Exception e) {
+            return ResponseEntity.internalServerError().build();
+        }
+    }
+
+    @Override
+    public ResponseEntity<UserResponse> editUser(String username, UserEditRequest request) {
+        try {
+            User user = userService.updateUser(username, userMapper.toModel(request));
+            return ResponseEntity.ok(userMapper.toResponse(user));
+        }
+        catch (NotFoundException e) {
+            return ResponseEntity.notFound().build();
+        }
+        catch (Exception e) {
             return ResponseEntity.internalServerError().build();
         }
     }
