# back/rust-away/src/main/java/com/amarchanh/rustaway/service/mapper/UserEntityMapper.java
@@ -2,6 +2,7 @@ package com.amarchanh.rustaway.service.mapper;
 
 import com.amarchanh.rustaway.repository.entity.UserEntity;
 import com.amarchanh.rustaway.service.model.User;
+import com.amarchanh.rustaway.service.model.UserEdit;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
@@ -10,6 +11,9 @@ public interface UserEntityMapper {
 
 
     User toModel(UserEntity entity);
+
+    @Mapping(source="newPassword", target = "password")
+    UserEntity toEntity(UserEdit userEdit);
 
     UserEntity toEntity(User user);
 }
